<resources>
    <string name="app_name">StoryAppSubmission</string>
    <string name="message_main_page">Welcome to StoryApp.</string>
    <string name="copyright">© 2023 Rivan Project</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="name_profile">Name: %s</string>
    <string name="email">Email</string>
    <string name="email_profile">Email: %s</string>
    <string name="password">Password</string>
    <string name="login_desc">To create your story in story app</string>
    <string name="register_desc">Create an account to make your story in story app</string>
    <string name="title_home">Story</string>
    <string name="title_addStory">Add Story</string>
    <string name="title_setting">Setting</string>
    <string name="logout_dialog_title">Are you sure?</string>
    <string name="logout_dialog_message">You need to login again after logout</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="logout_message_success">Logged out successfully</string>
    <string name="retry">Retry</string>
    <string name="loading_error_message">Unable to fetch stories data</string>
    <string name="stories_not_found_error">Stories not found</string>
    <string name="person_with_paper_illustration">Person with paper illustration</string>
    <string name="full_name">Full name</string>
    <string name="et_email_error_message">Email address is not valid</string>
    <string name="et_password_error_message">Passwords must be at least 8 characters</string>
    <string name="registration_error_message">Registration failed, please try again.</string>
    <string name="registration_success">Registration success</string>
    <string name="login_error_message">Login failed, please try again.</string>
    <string name="login_success_message">Login success</string>
    <string name="dummy_description">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet....</string>
    <string name="dummy_date">April 11, 2023</string>
    <string name="story_illustration">Story illustration</string>
    <string name="upload_story">Upload Story</string>
    <string name="select_image">Select image from</string>
    <string name="select_from_camera">Camera</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="write_a_description">Write a description</string>
    <string name="desc_empty_field_error">Please fill the description field</string>
    <string name="empty_image_error">Please select an image</string>
    <string name="story_upload_failed">Story upload failed</string>
    <string name="story_upload">Story uploaded</string>
    <string name="language_setting">Language Setting</string>
    <string name="setting">Setting</string>
    <string name="description">Description : %s</string>
    <string name="action_detail">Detail Story</string>
    <string name="profile">Profile</string>
    <string name="appwidget_text">STORY BANNER</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">NO DATA</string>

</resources>