<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.storyappsubmission.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_addstory"
        android:name="com.dicoding.storyappsubmission.ui.addStory.AddStoryFragment"
        android:label="@string/title_addStory"
        tools:layout="@layout/fragment_addstory" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.dicoding.storyappsubmission.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>